# DESIGNPATTERN-DATOSII

./: CMakeLists.txt  README.md
AFactory/: AbstractFactory.cpp  AbstractFactory.h
Adapter/: Adapter.cpp  Adapter.h
Builder/: Builder.cpp  Builder.h
Observer/: observer.cpp  observer.h
SIngleton/: Singleton.cpp  Singleton.h
